<resources>
    <string name="app_name">Advanced</string>
    <string name="lan_english">English(en)</string>
    <string name="lan_russian">Russian(ru)</string>
    <string name="lan_uzbek">Uzbek(uz)</string>
    <string name="lan_chinese">Chinese(zn)</string>
    <string name="lan_korean">Korean(ko)</string>
    <string name="lan_japanese">Japanese(ja)</string>

    <plurals name="my_cats">
        <item quantity="one">I have %s cat</item>
        <item quantity="other">I have %s cats</item>
    </plurals>

</resources>