<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LanguageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/b_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_english" />

        <Button
            android:id="@+id/b_russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_russian" />

        <Button
            android:id="@+id/b_uzbek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_uzbek" />
        <Button
            android:id="@+id/b_china"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_chinese" />

        <Button
            android:id="@+id/b_korea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_korean" />

        <Button
            android:id="@+id/b_japan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_japanese" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>